[gd_scene load_steps=6 format=3 uid="uid://coxyqkgmst4dv"]

[ext_resource type="Script" uid="uid://bj1xqo0u18idn" path="res://Scripts/Characters/Enemy/enemy.gd" id="1_c7fqo"]
[ext_resource type="Texture2D" uid="uid://dtwh2p786qsf0" path="res://Assets-Bullet-Hell/Bullet Hell - Assets/Sprites/Spritesheet.png" id="1_wxnum"]
[ext_resource type="Script" uid="uid://b1abgkg6pm4ey" path="res://Scripts/Objects/node_pool.gd" id="3_3ekg1"]
[ext_resource type="PackedScene" uid="uid://de4qbfq4y34s8" path="res://Scenes/Objects/enemy_bullet.tscn" id="4_ofthe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8gbba"]
radius = 17.262676

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_c7fqo")
MAX_SPEED = 50.0
ACCELERATION = 10.0
DRAG = 0.9
shoot_rate = 0.5
damage = 1.0
shoot_range = 250.0
max_hp = 3

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_wxnum")
region_enabled = true
region_rect = Rect2(641, 128, 31, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_8gbba")

[node name="EnemyBulletPool" type="Node" parent="."]
script = ExtResource("3_3ekg1")
node_scene = ExtResource("4_ofthe")

[node name="AvoidanceRay" type="RayCast2D" parent="."]

[node name="Muzzle" type="Node2D" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
